--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "./node_modules/.bin/rimraf dist",
     "tsc": "./node_modules/.bin/tsc",
     "copy-css": "./node_modules/.bin/gulp css",
+    "serve": "./node_modules/.bin/webpack-dev-server --history-api-fallback --inline --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,13 +26,29 @@
     "@types/d3": "^4.12.0",
     "@types/lodash": "^4.14.88",
     "@types/react": "^16.0.28",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-router": "^4.0.19",
+    "@types/react-router-dom": "^4.2.3",
+    "css-loader": "^0.28.7",
+    "debug-loader": "0.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-typescript": "^3.2.3",
+    "html-webpack-plugin": "^2.30.1",
     "merge2": "^1.2.0",
     "npm-run-all": "^4.1.2",
+    "postcss": "^6.0.14",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.9",
+    "postcss-simple-vars": "^4.1.0",
     "rimraf": "^2.6.2",
+    "style-loader": "^0.19.0",
+    "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -39,5 +56,8 @@
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
