--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "./node_modules/.bin/gulp build",
     "clean": "./node_modules/.bin/rimraf dist",
     "tsc": "./node_modules/.bin/tsc",
-    "serve": "./node_modules/.bin/webpack-dev-server --history-api-fallback --inline --progress",
+    "start": "./node_modules/.bin/webpack-dev-server --history-api-fallback --inline --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
