--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "./node_modules/.bin/rimraf dist",
     "tsc": "./node_modules/.bin/tsc",
     "start": "./node_modules/.bin/webpack-dev-server --history-api-fallback --inline --progress",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
