--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "tsc": "./node_modules/.bin/tsc",
     "start": "./node_modules/.bin/webpack-dev-server --history-api-fallback --inline --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npm run build"
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
