--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,7 +5,7 @@
         "target": "es5",
         "declaration": true,
         "outDir": "./dist",
-        "jsx": "preserve"
+        "jsx": "react"
     },
     "include": [
         "./**/*.ts"
