--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "@types/react-dom": "^16.0.3",
     "@types/react-router": "^4.0.21",
     "@types/react-router-dom": "^4.2.3",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.7",
     "debug-loader": "0.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-clean": "^0.3.2",
     "gulp-typescript": "^3.2.3",
     "html-webpack-plugin": "^2.30.1",
